force-app/main/default/objects/Receipt__c/fields/Accounting_Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Instrument_Date__c</fullName>
    <description>New Field (Future-looking)</description>
    <label>Accounting Instrument Date</label>
    <type>Date</type>
</CustomField>