force-app/main/default/objects/Receipt__c/fields/Add_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Add_Deduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on any layout, only visible on ICL. User checks this box to generate both a Net and Deduction RCT. This box will be checked on both the Net and Deduction RCT records.</description>
    <label>Add Deduction</label>
    <type>Checkbox</type>
</CustomField>