force-app/main/default/objects/Receipt__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated by the ReturnedVoidedReceipt class. A check here most likely means this record is a negating record, but this field could possibly be checked manually for other reasons.</description>
    <inlineHelpText>Populated by the ReturnedVoidedReceipt class. A check here most likely means this record is a negating record, but this field could possibly be checked manually for other reasons.</inlineHelpText>
    <label>Adjustment</label>
    <type>Checkbox</type>
</CustomField>