force-app/main/default/objects/Receipt__c/fields/Bank_Location__c.field-meta.xml
<CustomField>
    <fullName>Bank_Location__c</fullName>
    <description>Picklist field allows users to designate whether the bank is out of state or in CA</description>
    <label>Bank Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA Bank</fullName>
            </value>
            <value>
                <fullName>Out of State Bank</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>