force-app/main/default/objects/Receipt__c/fields/Buyback_Letter_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Buyback_Letter_Issue_Date__c</fullName>
    <description>Issue date for the buyback letter that is sent along with the buyback check. This is filled out by the cashier for the conga document to be generated.</description>
    <label>Buyback Letter Issue Date</label>
    <type>Date</type>
</CustomField>