force-app/main/default/objects/Receipt__c/fields/Case_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Case_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Assigned</label>
    <type>Checkbox</type>
</CustomField>