force-app/main/default/objects/Receipt__c/fields/Created_Via_PartyToPartyLWC__c.field-meta.xml
<CustomField>
    <fullName>Created_Via_PartyToPartyLWC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Not on any page layout. Used by PtpPartyToPartyPayment LWC and Case Payment Process to differentiate RCTs and CPs created through the PtpPartyToPartyPayment LWC as opposed to the ICL. Used to determine if a Task should be sent to the Deputy to Recommend CPs to Case Issues and/or Judgments--PtpPartyToPartyPayment LWC creates LPs and JPs, so a Task is not needed.</description>
    <label>Created Via PartyToPartyLWC</label>
    <type>Checkbox</type>
</CustomField>