force-app/main/default/objects/Receipt__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Required date field that captures the date of receipt on a payment</description>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>