force-app/main/default/objects/Receipt__c/fields/Deposit_Account__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Account__c</fullName>
    <description>Picklist for capturing the Deposit Account</description>
    <label>Deposit Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>01-116</fullName>
            </value>
            <value>
                <fullName>04-116</fullName>
            </value>
            <value>
                <fullName>05-113</fullName>
            </value>
            <value>
                <fullName>06-113</fullName>
            </value>
            <value>
                <fullName>07-119</fullName>
            </value>
            <value>
                <fullName>08-116</fullName>
            </value>
            <value>
                <fullName>09-117</fullName>
            </value>
            <value>
                <fullName>10-117</fullName>
            </value>
            <value>
                <fullName>11-119</fullName>
            </value>
            <value>
                <fullName>12-119</fullName>
            </value>
            <value>
                <fullName>13-113</fullName>
            </value>
            <value>
                <fullName>14-116</fullName>
            </value>
            <value>
                <fullName>15-116</fullName>
            </value>
            <value>
                <fullName>17-113</fullName>
            </value>
            <value>
                <fullName>18-113</fullName>
            </value>
            <value>
                <fullName>23-119</fullName>
            </value>
            <value>
                <fullName>32-117</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>01-112</fullName>
                <isActive>false</isActive>
                <label>01-112</label>
            </value>
            <value>
                <fullName>04-112</fullName>
                <isActive>false</isActive>
                <label>04-112</label>
            </value>
            <value>
                <fullName>06-114</fullName>
                <isActive>false</isActive>
                <label>06-114</label>
            </value>
            <value>
                <fullName>14-112</fullName>
                <isActive>false</isActive>
                <label>14-112</label>
            </value>
            <value>
                <fullName>23-124</fullName>
                <isActive>false</isActive>
                <label>23-124</label>
            </value>
            <value>
                <fullName>633-114</fullName>
                <isActive>false</isActive>
                <label>633-114</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>