force-app/main/default/objects/Receipt__c/fields/Deposit_Date__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Date__c</fullName>
    <formula>Transaction__r.Deposit_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Date</label>
    <type>Date</type>
</CustomField>