force-app/main/default/objects/Receipt__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>Not on any layout, only on ICL. This amount is entered by the user along with the Net Amount when adding a Deduction RCT; used by ICL code to calculate the Deduction Amount. This field's value will be the same on the Net RCT and it's related Deduction RCT.</description>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>