force-app/main/default/objects/Receipt__c/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <description>Updated by TransactionTrigger -&gt; TransactionMethods -&gt; AccountingDepositBatch.
Once this Receipt is deposited, this field is updated to TRN.Deposit_Date__c + Receipt_Hold_Date__mdt.Number_of_Days__c.</description>
    <label>Hold Date</label>
    <type>Date</type>
</CustomField>