force-app/main/default/objects/Receipt__c/fields/Lockbox_Payment__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lockbox Payment</label>
    <type>Checkbox</type>
</CustomField>