force-app/main/default/objects/Receipt__c/fields/Net_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Net_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the affiliated Net RCT from a Deduction RCT.</description>
    <inlineHelpText>Lookup to the affiliated Net RCT from a Deduction RCT.</inlineHelpText>
    <label>Net Receipt</label>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Deduction Receipts</relationshipLabel>
    <relationshipName>Deduction_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>