force-app/main/default/objects/Receipt__c/fields/Not_Processed_Limit_Exceeded__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Limit_Exceeded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Limit Exceeded</label>
    <type>Checkbox</type>
</CustomField>