force-app/main/default/objects/Receipt__c/fields/Not_Processed_Other__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Other</label>
    <type>Checkbox</type>
</CustomField>