force-app/main/default/objects/Receipt__c/fields/Not_Processed_Paid_In_Full__c.field-meta.xml
<CustomField>
    <fullName>Not_Processed_Paid_In_Full__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Processed Paid In Full</label>
    <type>Checkbox</type>
</CustomField>