force-app/main/default/objects/Receipt__c/fields/NSF_Demand_Letter_Attention_To__c.field-meta.xml
<CustomField>
    <fullName>NSF_Demand_Letter_Attention_To__c</fullName>
    <inlineHelpText>Used for NSF document to put who the letter should go to</inlineHelpText>
    <label>NSF Demand Letter Attention To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>