force-app/main/default/objects/Receipt__c/fields/Oracle_Receipt_Balance__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Balance__c</fullName>
    <description>For migrated data, the balance on the legacy Oracle receipt at the time of migration.</description>
    <label>Oracle Receipt Balance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>