force-app/main/default/objects/Receipt__c/fields/Oracle_Receipt_Original_Amount__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Receipt_Original_Amount__c</fullName>
    <description>Original Receipt Amount in the legacy Oracle database.</description>
    <inlineHelpText>Original Receipt Amount in the legacy Oracle database.</inlineHelpText>
    <label>Oracle Receipt Original Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>