force-app/main/default/objects/Receipt__c/fields/Original_CP_CRT_Info__c.field-meta.xml
<CustomField>
    <fullName>Original_CP_CRT_Info__c</fullName>
    <description>Hold the CM ID for cashiering rearchitecting data migration. Not on any layout.</description>
    <label>Original CP CRT Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>