force-app/main/default/objects/Receipt__c/fields/Original_PMT_Info__c.field-meta.xml
<CustomField>
    <fullName>Original_PMT_Info__c</fullName>
    <description>To hold Payment Amount, Check/Instrument Number, and Date Received for records from Payment Log</description>
    <label>Original PMT Info</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>