force-app/main/default/objects/Receipt__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>Required field. Refers to the amount of the incoming instrument; or for Deduction payments derived from one incoming instrument, refers to the net amount of the resultant Net RCT. The deduction amount of the resultant affiliated Deduction RCT will be in Deduction_Amount__c and this field will be $0.00.</description>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>