force-app/main/default/objects/Receipt__c/fields/Payment_Can_Be_Processed__c.field-meta.xml
<CustomField>
    <fullName>Payment_Can_Be_Processed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Use to hide/unhide the reason fields on ICL. (replacing the field "Can Payment Be Processed?"</description>
    <label>Payment Can Be Processed</label>
    <type>Checkbox</type>
</CustomField>