force-app/main/default/objects/Receipt__c/fields/Payment_Exchange__c.field-meta.xml
<CustomField>
    <fullName>Payment_Exchange__c</fullName>
    <description>Defines to whom the payment was directed.</description>
    <label>Payment Exchange</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Division Payment</fullName>
            </value>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
            <value>
                <fullName>Party to Party</fullName>
            </value>
            <value>
                <fullName>Reversal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>