force-app/main/default/objects/Receipt__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Picklist field for designating the payment type</description>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Cashier's Check</fullName>
            </value>
            <value>
                <fullName>Money Order</fullName>
            </value>
            <value>
                <fullName>State Warrant</fullName>
            </value>
            <value>
                <fullName>State Warrant - Returned by USPS</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>