force-app/main/default/objects/Receipt__c/fields/Payor__c.field-meta.xml
<CustomField>
    <fullName>Payor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Receipts1</relationshipName>
    <type>Lookup</type>
</CustomField>