force-app/main/default/objects/Receipt__c/fields/Reference1__c.field-meta.xml
<CustomField>
    <fullName>Reference1__c</fullName>
    <description>Hold the CP ID during cashiering rearchitecting migration. Not on any layout.</description>
    <label>Reference1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>