force-app/main/default/objects/Receipt__c/fields/Returned_Date__c.field-meta.xml
<CustomField>
    <fullName>Returned_Date__c</fullName>
    <description>Date a payment was returned from the bank. Different from Date_Returned__c which is the date a payment was mailed back to the submitter.</description>
    <inlineHelpText>Date a payment was returned from the bank. Different from Date Returned which is the date a payment was mailed back to the submitter.</inlineHelpText>
    <label>Returned Date</label>
    <type>Date</type>
</CustomField>