force-app/main/default/objects/Receipt__c/fields/Returned_Item_Received_By__c.field-meta.xml
<CustomField>
    <fullName>Returned_Item_Received_By__c</fullName>
    <description>RFO requirement F-0255</description>
    <inlineHelpText>Indicate which unit marked the payment as a returned item; DIR Accounting or DLSE Cashiering.</inlineHelpText>
    <label>Returned Item Received By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCT</fullName>
            </value>
            <value>
                <fullName>DLSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>