force-app/main/default/objects/Receipt__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <inlineHelpText>Please select the reason an item was returned when marking it as a returned item</inlineHelpText>
    <label>Returned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>Stopped</fullName>
            </value>
            <value>
                <fullName>Stale Dated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>