force-app/main/default/objects/Receipt__c/fields/Returned_Voided_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Returned_Voided_Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this RCT is a Corrective Entry, this field looks up to the original RCT that this RCT negates.</inlineHelpText>
    <label>Returned/Voided Receipt</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Receipt__c.Returned_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Receipt__c.Voided_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Receipt__c</referenceTo>
    <relationshipLabel>Returned/Voided By</relationshipLabel>
    <relationshipName>Returned_Voided_By</relationshipName>
    <type>Lookup</type>
</CustomField>