force-app/main/default/objects/Receipt__c/fields/Reversal__c.field-meta.xml
<CustomField>
    <fullName>Reversal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Reversal payment. Checked when a Receipt is created via the PartyPaymentVFP with the payment method of Reversal selected. Populated by the PartyPaymentController apex class.</description>
    <inlineHelpText>Signifies a Reversal payment method, usually created via the Party to Party/Deductions button on the Case Management.</inlineHelpText>
    <label>Reversal</label>
    <type>Checkbox</type>
</CustomField>