force-app/main/default/objects/Receipt__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Deposit Pending</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Deposited-Returned</fullName>
            </value>
            <value>
                <fullName>Deposited-Returned Deduction</fullName>
            </value>
            <value>
                <fullName>Corrective Entry</fullName>
            </value>
            <value>
                <fullName>Mailed to Employee</fullName>
            </value>
            <value>
                <fullName>Restitution Warrant sent to JEU</fullName>
            </value>
            <value>
                <fullName>Returned to Sender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>