force-app/main/default/objects/Receipt__c/fields/Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Date__c</fullName>
    <description>Date the status is set of changed. Populated by WFR</description>
    <inlineHelpText>Date of status change</inlineHelpText>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>