force-app/main/default/objects/Receipt__c/fields/Total_Amount_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Allocated__c</fullName>
    <label>Total Amount Allocated</label>
    <summarizedField>Case_Payment__c.Payment_Amount__c</summarizedField>
    <summaryForeignKey>Case_Payment__c.Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>