force-app/main/default/objects/Receipt__c/fields/Void_Reason__c.field-meta.xml
<CustomField>
    <fullName>Void_Reason__c</fullName>
    <inlineHelpText>Enter reason when setting receipt to void.</inlineHelpText>
    <label>Void Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>