force-app/main/default/objects/Receipt__c/fields/Voided_Item__c.field-meta.xml
<CustomField>
    <fullName>Voided_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this Receipt needs to be voided.</inlineHelpText>
    <label>Voided Item</label>
    <type>Checkbox</type>
</CustomField>