force-app/main/default/objects/Receipt__c/fields/Wage_Passthrough__c.field-meta.xml
<CustomField>
    <fullName>Wage_Passthrough__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Currently not in use. 
When Wage Passthrough is checked, Senior Deputy should be selected and email about the receipt has to be sent to the respective Senior Deputy.</description>
    <label>Wage Passthrough</label>
    <type>Checkbox</type>
</CustomField>