force-app/main/default/objects/Receipt__c/validationRules/Bank_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Bank_Location</fullName>
    <active>true</active>
    <description>Bank Location is req. if type = Check</description>
    <errorConditionFormula>AND(
   OR(TEXT( Payment_Type__c ) = 'Check', TEXT( Payment_Type__c ) = "Cashier\'s Check", TEXT( Payment_Type__c ) = 'Money Order'), 
   ISBLANK( TEXT(  Bank_Location__c  ) )
)</errorConditionFormula>
    <errorDisplayField>Bank_Location__c</errorDisplayField>
    <errorMessage>Bank Location is req. if type = Check</errorMessage>
</ValidationRule>