force-app/main/default/objects/Receipt__c/validationRules/Cannot_Change_Void.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Void</fullName>
    <active>true</active>
    <description>Only a Sr. Cashier or System Admin can change the Status away from Void.</description>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
ISPICKVAL(PRIORVALUE(Status__c), 'Void') &amp;&amp;
(!$Permission.DLSE_Sr_Cashier &amp;&amp;
!(CONTAINS($Profile.Name, "System Administrator")))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You are not authorized to change the Status away from Void.</errorMessage>
</ValidationRule>